# custom_bird_learning

./: README.md  main.py  pyproject.toml  scrape_xeno_canto.py
